force-app/main/default/objects/MUSW__File__c/MUSW__File__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Wrapper for attachments whether system generated or images</description>
    <label>File</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>