force-app/main/default/objects/MUSW__File__c/fields/MUSW__Attachment__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Attachment__c</fullName>
    <formula>HYPERLINK("https://elgin311.my.salesforce.com/" &amp; MUSW__ObjectId__c , "Link to Attachment" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment</label>
    <type>Text</type>
</CustomField>