force-app/main/default/objects/MUSW__File__c/fields/MUSW__SysGen__c.field-meta.xml
<CustomField>
    <fullName>MUSW__SysGen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SysGen</label>
    <type>Checkbox</type>
</CustomField>